package bigtalkdesignMod.v27.v27_2;

public abstract class AbstractExpression {
    public abstract void interpert(Context context);
}
