package bigtalkdesignMod.v27.v27_2;

public class TerminalExpression extends AbstractExpression {

    @Override
    public void interpert(Context context) {
        // TODO Auto-generated method stub
        System.out.println("终端解释器");
    }

}
